--- a/server/composer.json
+++ b/server/composer.json
@@ -19,9 +19,18 @@
 	"require-dev" : {
 		"phpunit/phpunit" : "5.2"
 	},
+	"minimum-stability": "dev",
+	"require": {
+		"elgervb/php-router": "dev-master",
+		"elgervb/php-upload": "dev-master",
+		"elgervb/php-view": "dev-master",
+		"elgervb/php-http": "dev-master",
+		"elgervb/php-handler": "dev-master",
+		"elgervb/imagemanipulation": "dev-master"
+	},
 	"autoload" : {
 		"psr-0" : {
-			"ns" : [
+			"upload" : [
 				"src",
 				"tests"
 			]
@@ -32,14 +41,5 @@
 		"source" : "https://github.com/elgervb/image-edit",
 		"issues" : "https://github.com/elgervb/image-edit/issues",
 		"email" : "elgervb@gmail.com"
-	},
-	"minimum-stability": "dev",
-	"require": {
-		"elgervb/php-router": "dev-master",
-		"elgervb/php-upload": "dev-master",
-		"elgervb/php-view": "dev-master",
-		"elgervb/php-http": "dev-master",
-		"elgervb/php-handler": "dev-master",
-		"elgervb/imagemanipulation": "dev-master"
 	}
 }
