--- a/client/.editorconfig
+++ b/client/.editorconfig
@@ -1,24 +1,14 @@
-root = true
+root = false
 
 [*]
 end_of_line = lf
 insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.js,*.scss,*.html,*.svg,*.json]
+indent_size = 4
 indent_style = space
+
+[package.json]
 indent_size = 4
-
-[*.py]
-line_length = 79
-multi_line_output = 4
-balanced_wrapping = true
-known_first_party = wiskerke_onions,tests
-use_parentheses = true
-
-[*.json, *.yml]
-indent_size = 2
-
-[*.{rc}]
-indent_size = 2
-
-[Makefile]
-indent_style = tab
-indent_size = 4
+indent_style = space
