--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -17,6 +17,7 @@
         "indent": ["error", 4],
         "class-methods-use-this": 0,
         "react/jsx-indent": ["error", 4],
+        "react/jsx-indent-props": ["error", 4],
         "jsx-quotes": ["error", "prefer-double"],
 		"linebreak-style": 0,
         "max-len": ["error", 150],
